--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
                 <configuration>
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>de.christian2003.psychiatric.Main</mainClass> <!-- Replace with your main class -->
+                            <mainClass>de.christian2003.psychiatric.application.PsychiatricManagementTool</mainClass> <!-- Replace with your main class -->
                         </transformer>
                     </transformers>
                 </configuration>
