Update gitignore to disregard university documentation

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ build/
 crisisinterventionareas.json
 nurses.json
 patients.json
+
+### Documentation for university ###
+/docs/development/Psychiatric Management Tool.docx
+/docs/development/Psychiatric Management Tool.pdf
